# honjo-masamune

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
crates/atp-manager/: Cargo.toml
crates/atp-manager/src/: electron_transport.rs  glycolysis.rs  krebs_cycle.rs  lactic_fermentation.rs  lib.rs  metabolism.rs
crates/bayesian-core/: Cargo.toml  requirements.txt
crates/bayesian-core/src/: lib.rs
crates/bloodhound-integration/: Cargo.toml
crates/bloodhound-integration/src/: conversational_ai.rs  data_sovereignty.rs  federated_learning.rs  health_checker.rs  lib.rs  local_processor.rs  p2p_network.rs  zero_config.rs
crates/buhera-engine/: Cargo.toml
crates/buhera-engine/src/: ast.rs  fuzzy_inference.rs  grammar.pest  interpreter.rs  knowledge_base.rs  lib.rs  resolution.rs  unification.rs
crates/diggiden/: Cargo.toml
crates/diggiden/src/: lib.rs
crates/dreaming-module/: Cargo.toml
crates/dreaming-module/src/: lib.rs
crates/fuzzy-logic/: Cargo.toml
crates/fuzzy-logic/src/: gray_areas.rs  hedges.rs  lib.rs  operators.rs  truth_spectrum.rs  uncertainty.rs
crates/hatata/: Cargo.toml
crates/hatata/src/: lib.rs
crates/metacognitive-stack/: Cargo.toml
crates/metacognitive-stack/src/: lib.rs
crates/preparation-engine/: Cargo.toml
crates/preparation-engine/src/: lib.rs
crates/repository-interfaces/: Cargo.toml
crates/repository-interfaces/src/: lib.rs
crates/truth-respiration/: Cargo.toml
crates/truth-respiration/src/: electron_transport.rs  glycolysis.rs  krebs_cycle.rs  lib.rs
docs/: diadochi.md
scripts/: setup.sh
src/: config.rs  diadochi.rs  diggiden.rs  engine.rs  hatata.rs  main.rs  monitoring.rs  mzekezeke.rs  nicotine.rs  repositories.rs  spectacular.rs  zengeza.rs
