[package]
name = "atp-manager"
version = "0.1.0"
edition = "2021"
authors = ["fullscreen-triangle"]
description = "ATP (Adenosine Triphosphate) management system for Honjo Masamune biological metabolism"
license = "RESTRICTED"

[dependencies]
# Async support
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# UUID for tracking
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Concurrency
parking_lot = "0.12"
crossbeam = "0.8"

# Metrics
metrics = "0.21"

# Fuzzy logic integration
fuzzy-logic-core = { path = "../fuzzy-logic" }

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[[bench]]
name = "atp_operations"
harness = false 