[package]
name = "bayesian-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
pyo3 = { version = "0.20", features = ["auto-initialize"] }
numpy = "0.20"
ndarray = "0.15"
petgraph = "0.6"
rayon = "1.7"
dashmap = "5.5"
ordered-float = "4.2"

[dependencies.pyo3-asyncio]
version = "0.20"
features = ["tokio-runtime"] 