[package]
name = "diggiden"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"
petgraph = "0.6"
rayon = "1.7"
dashmap = "5.5"
ordered-float = "4.2"
ndarray = "0.15"
statrs = "0.16"

# For adversarial ML techniques
candle-core = "0.3"
candle-nn = "0.3"
tch = { version = "0.13", optional = true }

# For fuzzing and property testing
proptest = "1.4"
quickcheck = "1.0"
arbitrary = { version = "1.3", features = ["derive"] } 