[package]
name = "dreaming-module"
version = "0.1.0"
edition = "2021"
authors = ["fullscreen-triangle"]
description = "Dreaming module for processing lactate and generating new Buhera scripts"
license = "RESTRICTED"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
fuzzy-logic-core = { path = "../fuzzy-logic" }
atp-manager = { path = "../atp-manager" } 