[package]
name = "hatata"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"
petgraph = "0.6"
rayon = "1.7"
dashmap = "5.5"
ordered-float = "4.2"
ndarray = "0.15"
ndarray-linalg = "0.16"
statrs = "0.16"

# For optimization and numerical methods
nalgebra = "0.32"
argmin = "0.8"
optimization = "0.2"

# For stochastic differential equations
ode_solvers = "0.3"
diffsol = "0.1"

# For reinforcement learning and MDP
smartcore = "0.3" 