[package]
name = "repository-interfaces"
version = "0.1.0"
edition = "2021"
authors = ["fullscreen-triangle"]
description = "Repository interfaces for external data sources"
license = "RESTRICTED"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
fuzzy-logic-core = { path = "../fuzzy-logic" } 