[package]
name = "truth-respiration"
version = "0.1.0"
edition = "2021"
authors = ["fullscreen-triangle"]
description = "Truth respiration system implementing biological metabolism for Honjo Masamune"
license = "RESTRICTED"

[dependencies]
# Async support
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# UUID for tracking
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Integration with other crates
fuzzy-logic-core = { path = "../fuzzy-logic" }
atp-manager = { path = "../atp-manager" } 